# normal-form

./: .gitignore  404.html  README.md  README.org  cnf.md~  index.html  index.md README.md~  index.md~  justfile  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-package.yml
cnf/: index.html
cnf_simplify/: index.html
index.md README/: index.html
literate_documentation/: index.html
normal_form/: __init__.py  cnf.py  cnf_simplify.py  prop.py  sat.py  sxpr.py
normal_form/tests/: test_cnf.py  test_cnf_simplify.py  test_normal_form.py  test_prop.py  test_sat.py  test_sxpr.py
prop/: index.html
sat/: index.html
search/: search_index.json
stubs/: tqdm.pyi
sxpr/: index.html
tests/: test_cnf.py  test_cnf_simplify.py  test_normal_form.py  test_prop.py  test_sat.py  test_sxpr.py
